оформил окно ввода бонусной карты. следующий шаг - написание скриптов и импорт номеров карт

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 		<div id="bonus">
 			<div id="bonus-area">
 				<div id="bonus-area-input">
-					<input type="text" maxlength="20" value="Введите номер Ваше карты">
+					<input type="text" class="bonus-input-blur" maxlength="20" value="Введите номер карты">
 				</div>
+				<a href="#check-bonus-card"  id="bonus-link-check">Проверить</a>
 			</div>
 		</div>
 		<div id="content">
