--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link href="favicon.ico" rel="icon" type="image/x-icon">
 <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
-<link href="sn-project/style/main.css" rel="stylesheet" type="text/css">
+<link href="sn-project/style/main.css" rel="stylesheet" type="text/css"></script>
+<script src="sn-project/lib/jQuery1.7.min.js" type="text/javascript"></script>
+<script src="sn-project/script/jQuery.snLeo.js" type="text/javascript"></script>
+<script src="sn-project/script/jQuery.snLeo.conf.js" type="text/javascript"></script>
+<script src="sn-project/script/jQuery.snLeo.ajax.js" type="text/javascript"></script>
+<script src="sn-project/script/jQuery.snLeo.events.js" type="text/javascript"></script>
+<script src="sn-project/script/jQuery.snLeo.triggers.js" type="text/javascript"></script>
+<script type="text/javascript">
+	$(function(){
+		$("#leonardo").snLeo();
+	});
+</script>
 </head>
 <body>
+<div id="leonardo"></div>
 <div id="wrap">
 	<div id="main">
 		<div id="header">
